[gd_scene load_steps=3 format=3 uid="uid://dmwqj1xxuahjc"]

[ext_resource type="Script" path="res://scenes/description_container.gd" id="1_3aeke"]
[ext_resource type="Texture2D" uid="uid://ceomsqy5wdtja" path="res://icon.svg" id="2_rf6x4"]

[node name="DescriptionContainer" type="PanelContainer"]
custom_minimum_size = Vector2(144, 0)
offset_right = 99.0
offset_bottom = 75.0
script = ExtResource("1_3aeke")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="IconTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("2_rf6x4")
expand_mode = 1

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Name"

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(144, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Description"
autowrap_mode = 2
